Require Go 1.7 and newer.
We need to do this in order to be able to resolve #526 without
unreasonable compromises.

That's the minimum version that has context package in standard
library, and built-in support for it inside net/http package.
Now that Go 1.8 is out, this "current version, plus one back".

Bump up the library version in anticipation of breaking API changes
in following commits. It makes sense to bump it now because this
commit drops support for Go versions 1.4, 1.5 and 1.6, so we can
say that version 2 is the latest supported by older Go versions.

Helps #526.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,12 @@
 sudo: false
 language: go
 go:
-  - 1.5.4
-  - 1.6.3
-  - 1.7
-  - tip
+  - 1.7.x
+  - 1.8.x
+  - master
 matrix:
-  include:
-    - go: 1.4.3
-      script:
-        - go get -t -v ./...
-        - go test -v -race ./...
   allow_failures:
-    - go: tip
+    - go: master
   fast_finish: true
 install:
   - # Do nothing. This is needed to prevent default install action "go get -t -v ./..." from happening here (we want it to happen inside script step).
