--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,6 @@ install:
 script:
   - go get -t -v ./...
   - diff -u <(echo -n) <(gofmt -d -s .)
+  - go generate -x ./... && git diff --exit-code
   - go tool vet .
   - go test -v -race ./...
