--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
 script:
   - go get -t -v ./...
   - diff -u <(echo -n) <(gofmt -d -s .)
-  - go generate -x ./... && git diff --exit-code
+  - go generate -x ./... && git diff --exit-code; code=$?; git checkout -- .; exit $code
+  - git diff --exit-code
   - go tool vet .
   - go test -v -race ./...
