temporarily remove coveralls test coverage
This seems to be causing some issues:
https://travis-ci.org/google/go-github/jobs/268069435

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,6 @@ script:
   - go test -v -tags=integration -run=^$ ./test/integration # Check that integration test builds successfully, but don't run any of the tests (they hit live GitHub API).
 
   # Generate test coverage report. This must be after all other tests.
-  - rm github/github-accessors.go # exclude generated code
-  - go test -v -covermode=count -coverprofile=coverage.out ./github
-  - $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
+  #- rm github/github-accessors.go # exclude generated code
+  #- go test -v -covermode=count -coverprofile=coverage.out ./github
+  #- $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
